[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "crewai>=1.13.0",
    "crewai-tools>=0.76.0",
    "feedparser>=6.0.12",
    "gtts>=2.5.4",
    "langchain-openai>=1.1.12",
    "litellm>=1.83.0",
    "lxml>=6.0.2",
    "moviepy>=2.2.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
